--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ paginate: 5
 footer-links:
   behance: # https://www.behance.net/<username>
   dribbble:
-  email:
+  email: warley8013@gmail.com
   facebook:
   flickr:
   github: AWEEKJ/kiko-now
