--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,21 @@
 #
 
 # Name of your site (displayed in the header)
-name: Kiko Now
+name: 葡萄园@无墙计划
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 教程分享，以及文章备份
 
 #
 # Flags below are optional
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# avatar: https://i.loli.net/2018/05/16/5afc1d0f14693.jpg
+# delete: https://sm.ms/delete/BpId7vtEFNwLfcR
+
+avatar: https://i.loli.net/2018/05/16/5afc21b7840e2.jpg
+# delete: https://sm.ms/delete/2odVpBevQnGrFPJ
 
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
@@ -32,28 +36,28 @@ navigation:
     url: https://github.com/AWEEKJ/kiko-now
 
 # Pagination
-paginate: 5
+paginate: 10
 
 # Includes an icon in the footer for each username you enter
 footer-links:
   behance: # https://www.behance.net/<username>
   dribbble:
-  email:
+  email: warley8013+gh@gmail.com
   facebook:
   flickr:
-  github: AWEEKJ/kiko-now
+  github: caster8013
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: uvp # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
-  twitter: jekyllrb
+  twitter: # jekyllrb
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
-footer-text: © 2017 Kiko Now
+footer-text: © 2018 无墙计划@葡萄园
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
