--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 葡萄园@无墙计划
 
 # Short bio or description (displayed in the header)
-description: 教程分享，以及文章备份
+description: 蕃茄教程&时评文章备份
 
 #
 # Flags below are optional
