--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ footer-text: © 2018 无墙计划@葡萄园
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: # <username>.disqus.com
+disqus: www-undervineyard-tk.disqus.com # <username>.disqus.com
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
