--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ navigation:
     url: /archive
   - name: Tags
     url: /tags
-  - name: Theme
-    url: https://github.com/AWEEKJ/kiko-now
+  - name: Repository
+    url: https://github.com/caster8013/caster8013.github.io
 
 # Pagination
 paginate: 10
