--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,14 @@ navigation:
     url: /
   - name: About
     url: /about
-  - name: Archive
-    url: /archive
+  # - name: Archive
+    # url: /archive
   - name: Tags
     url: /tags
   - name: Repository
     url: https://github.com/caster8013/caster8013.github.io
+  - name: FTP
+    url: http://w8.undervineyard.com/
 
 # Pagination
 paginate: 10
