'葡萄园'tag deleted.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 葡萄园@无墙计划
+name: 无墙计划
 
 # Short bio or description (displayed in the header)
 description: 蕃茄教程&时评文章备份
