web proxy deleted.

--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ navigation:
     url: /archive
   # - name: Tags
   #   url: /tags
-  - name: Web Proxy
-    url: https://nodeunblocker.ml
+  # - name: Web Proxy
+  #   url: https://nodeunblocker.ml
   # - name: Repository
   #   url: https://github.com/caster8013/caster8013.github.io
   # - name: FTP
