wrong msg fixed.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: UVP
 
 # Short bio or description (displayed in the header)
-description: UVP Turorials & Posts Backup
+description: UVP Tutorials & Posts Backup
 
 #
 # Flags below are optional
